@@ -55,13 +55,13 @@
 (assert (= (class-allocation-reader) 4))
 
 ;;; from James Anderson via Gerd Moellmann: defining methods with
-;;; forward-referenced specializers used not to work (FIXME: and also
-;;; calling said method with an instance of something else
-;;; [SPECIALIZER1, here] should work -- patch forthcoming)
+;;; specializers with forward-referenced superclasses used not to
+;;; work.
 (defclass specializer1 () ())
 (defclass specializer2 (forward-ref1) ())
 (defmethod baz ((x specializer2)) x)
 (defmethod baz ((x specializer1)) x)
+(assert (typep (baz (make-instance 'specializer1)) 'specializer1))
 
 ;;; success
 (sb-ext:quit :unix-status 104)
