@@ -1624,8 +1624,11 @@ changes in sbcl-0.8.0 relative to sbcl-0.7.14
     private implementation detail, and no longer a semi-private MOP
     interface.
   * known functions, which cannot be open coded by backend, are
-    considered to be able to check types of their arguments. (reported
-    by Nathan J. Froyd)
+    considered to be able to check types of their arguments.
+    (reported by Nathan J. Froyd)
+  * fixed a bug in computing method discriminating functions: it is
+    now possible to define methods specialized on classes which have
+    forward-referenced superclasses.  (thanks to Gerd Moellmann)
   * fixed some bugs revealed by Paul Dietz' test suite:
     ** COPY-ALIST now signals an error if its argument is a dotted
        list;
